# pkernel

./: Cargo.toml  Makefile  README.md  debug.sh
docs/: page_table.drawio
src/: console.rs  entry.asm  lang_item.rs  lib.rs  linker.ld  main.rs  sbi.rs
src/mm/: frame_allocator.rs  heap_allocator.rs  mod.rs
src/mm/sv39/: page_table.rs  page_table_entry.rs
src/trap/: mod.rs
